fix security issues and add prod env var support
- Replace DefaultHasher with SHA-256 for session token hashing
- Use OsRng instead of thread_rng for session token generation
- Add Secure flag on cookies in production
- Add admin seed from ADMIN_USERNAME/EMAIL/PASSWORD env vars
- Add auth middleware (require_admin) instead of manual checks per handler
- Add security headers middleware (CSP, X-Frame-Options, HSTS, etc.)
- Add rate limiting on submission creation (20/hour/IP)
- Fix file path traversal: sanitize filenames, canonical path check
- Fix N+1 query in list_submissions with batch document fetch
- Remove dangerous MIME types (text/html, application/xml, text/xml)
- Tighten CSP: add form-action, base-uri, frame-ancestors
- Fix XSS in frontend: escape all dynamic data in innerHTML
- Add periodic cleanup task for expired sessions and rate limits
- Fix migration error handling with tracking table
- Support prod env vars: DATABASE_SERVER_FULL, DATABASE_SERVER_HOST/PORT/USER/PASSWORD/DB
- Support DATA_PATH env var as fallback for upload directory
- Add 28 unit tests for auth, validation, and helpers

--- a/frontend/admin/dashboard.html
+++ b/frontend/admin/dashboard.html
@@ -76,9 +76,16 @@
 
     document.getElementById('btn-logout').addEventListener('click', logout);
 
+    function escapeHtml(str) {
+      if (!str) return '';
+      const div = document.createElement('div');
+      div.textContent = str;
+      return div.innerHTML;
+    }
+
     checkAuth().then(user => {
       if (user) {
-        document.getElementById('admin-name').innerHTML = `Welkom, <strong>${user.display_name || user.username}</strong>`;
+        document.getElementById('admin-name').innerHTML = `Welkom, <strong>${escapeHtml(user.display_name || user.username)}</strong>`;
         loadDashboard();
       }
     });
